--- a/html/solution/Design_rateLimiter.html
+++ b/html/solution/Design_rateLimiter.html
@@ -108,7 +108,7 @@ say you have 1m user, total memory is = 38MB. where one server can satisfy.
 We need to put it in high performance cache DB such a memcached or casandra
 
 
-Solution II: sliding  windows:
+Solution II: sliding  windows: 4/21/2020
 algorithm:
 
 
