--- a/html/solution/interview.html
+++ b/html/solution/interview.html
@@ -16,8 +16,12 @@ Coding:
 design:
 第二题design rate limiter
 
+
+
+
+
 FB:
-coding: 543(ok), 42, 56, 297, 88, 23, 1026, 773, 84
+coding: 543(ok), 42, 56, 297, 88, 23, 1026(ok), 773(ok), 84
 
 design:
 auto complete/typeahead
