--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -92,6 +92,9 @@ number   Date        rank         score    Finish time     Q1              Q2   
 179      3/7       2497 / 6242	 	 8	     1:31:18	      0:30:14(6)       		      0:56:18(1)
 181      3/21      3834 / 6782	 	 3	     0:05:06	      0:05:06
 182      3/28      4767 / 7784	   7	     1:25:50	      0:07:00(1)	  1:10:50(2)
+186      4/25      4843 / 11684	 	 3	     0:06:25	      0:06:25
+
+
 
           coding    design                                  下午
 12/4        3        2         8-11 coding,           状态很差，眼睛都睁不开了(看了design), 晚上回去睡到9点开始看API design, 9-11, 12-1睡不着 breaking bad. 2:30还是睡不着 youtube video
@@ -265,6 +268,20 @@ number   Date        rank         score    Finish time     Q1              Q2   
 4/17                 2            10 - 12    rate limiter
 4/18                 2
 4/19                            break
+
+4/20(M 15 weeks count down)     sick
+4/21                1.5         rate limiter
+4/22                 2
+4/23                            config mgr presentation
+4/24
+4/25    1.5
+4/26
+
+14 weeks
+4/27M   1.5                   continue leetcode contest
+4/28                 1        Typeahead
+4/29                 2      Typeahead
+
 
 </code></pre>
 </body>
