--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -330,13 +330,14 @@
 
 <div class="codingSectionName">Linear Scan(Hard)</div>
 <ul>
-   <li><a href=https://leetcode.com/problems/daily-temperatures/>739. Daily Temperatures(stack)</a>  </li>
+   <li><a href=https://leetcode.com/problems/daily-temperatures/>Daily Temperatures(stack)</a>  </li>
    <li><a href=https://leetcode.com/problems/maximum-subarray-sum-with-one-deletion/>1186. Maximum Subarray Sum with One Deletion
 (Maximum subarray algo)</a>  </li>
-   <li><a href=https://leetcode.com/problems/k-concatenation-maximum-sum/>1191. K-Concatenation Maximum Sum
+   <li><a href=https://leetcode.com/problems/k-concatenation-maximum-sum/>K-Concatenation Maximum Sum
 (Maximum subarray algo modification)</a>  </li>
    <li><a href=https://leetcode.com/problems/longest-arithmetic-subsequence-of-given-difference/submissions/>1218. Longest Arithmetic Subsequence of Given Difference(scan and record)
 </a>  </li>
+<li><a href=https://leetcode.com/problems/largest-rectangle-in-histogram/>Largest Rectangle in Histogram(单调栈 monoponous stack)</a></li>
 </ul>
 
 
@@ -355,6 +356,10 @@
    <li><a href=https://leetcode.com/problems/minimum-remove-to-make-valid-parentheses/>Minimum Remove to Make Valid Parentheses(返回String用stack记录需要去掉的位置位置)</a></li>
 </ul>
 
+<div class="codingSectionName">Intervals chapter</div>
+<ul>
+  <li><a href="solution/mergeIntervals.html">Merge intervals</a> <a href=https://leetcode.com/problems/merge-intervals/>Q</a>  </li>
+</ul>
 </body>
 
 <div class="codingSectionName">System Design</div>
