--- a/html/solution/interview.html
+++ b/html/solution/interview.html
@@ -21,7 +21,7 @@ design:
 
 
 FB:
-coding: 543(ok), 42, 56, 297, 88, 23, 1026(ok), 773(ok), 84
+coding: 543(ok), 42, 56, 297(ok), 88(ok), 23(ok), 1026(ok), 773(ok), 84(ok)
 
 design:
 auto complete/typeahead
