--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -17,6 +17,9 @@ Seattle:
 
 F: E4: 160 + 100/y + 70   + 10% = 350     [61, 62] -> E4
    E5: 200  + 120/y + 100 + 15% = 450
+   E6: 210  + 220   + 100 + 15* = 530
+
+G: T4: 150000 + 80  + 30 + 15%  = 290
 
 OCI:
   IC3:  185 + 120k + 25k = 325k      [61,62] -> IC3 Senior MTS
@@ -27,6 +30,7 @@ SaleForce:
 
 Snap:
   L5:   210k + 300k + 50k + 15% = 580k
+  L5:   210K + 300k +           = 510K
 
 Timeline consideration:
 1. Green card: Submit 485 on 2/5. 485 + 180 = 8/5.
@@ -281,6 +285,15 @@ number   Date        rank         score    Finish time     Q1              Q2   
 4/27M   1.5                   continue leetcode contest
 4/28                 1        Typeahead
 4/29                 2      Typeahead
+4/30
+5/1                  2
+5/2                  2        Memory management
+5/3                  1        Memory
+
+13 weeks mark
+5/4        1          1        memory
+5/5                   1        meomry
+5/6        1.5        1        memory 
 
 
 </code></pre>
