--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -43,7 +43,7 @@ Facebook Design Questions:
 <li> <a href="Design_Instangram.html">Design news feed : Facebook/Instangram/Twitter/微信朋友圈/Sina Weibo </a></li>
 <li> <a href="Design_Youtube.html">Design Streaming app: Netflix, Youtube</a> </li>
 <li> <a href="Design_rateLimiter.html">Design API rate limiter</a></li>
-<li> <a href="Design_rateLimiter.html">Design TypeAhead</a></li>
+<li> <a href="Design_TypeAhead.html">Design TypeAhead</a></li>
 
 
 
