--- a/html/solution/Design_TypeAhead.html
+++ b/html/solution/Design_TypeAhead.html
@@ -24,5 +24,25 @@ what is your top sugeestion with count, and child does the same to its child,
 all the way from root to leaf node, and then conquer, parent node combine the result and
 store the top 10 results, all the way up.
 
+3. How to update trie?
+This service is extremly latency sensitive. If we allow read and write at the same time,
+it will hurt performance. The solution is to collect log offline and build new trie and distribute to
+trie service and load in memory, switch the trie and discard old trie.
+
+4. How to collect log offline?
+The number of search query is trillion level. We don't need to count every term query,
+Use throttling log, say log once every 1000 query.
+
+5. How to build trie offline
+Grokking interview thinks we need to take into consideration both old trie and new trie,
+where old term takes less weight and new term takes more weight. using EMA(exponential move avarage)
+When adding a new term, add frequency at terminal letter node, and update top 10 count from top to leaf accordingly
+
+This appraoch is complicated, I will think rebuilding the trie is simplest.
+
+6. How to remove a term from the trie from system perspective(hate, porn, drug)
+a. Remove it from trie when build the trie.
+b. Add another filter layer before sending it back to user.
+
 </code></pre>
 </body>
