--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -67,6 +67,8 @@ Coding:
 
 4/15 对着一亩三分地FB面经的题目刷题
 
+5/8: 只刷FB面经上的题目
+
 Design:
 1. Book API design, educative design question, github Facebook design.
 2. company oriented:一亩三名地的facebook design question. 对着题目准备
@@ -80,6 +82,7 @@ Mar - April: Groking system interview design + DDIA
 
 April 4/15: 对着一亩三分地上design的题目刷题
 
+May 5/8: 只刷FB Design 面经的设计题目
 
 
 作息时间总结：
@@ -293,7 +296,17 @@ number   Date        rank         score    Finish time     Q1              Q2   
 13 weeks mark
 5/4        1          1        memory
 5/5                   1        meomry
-5/6        1.5        1        memory 
+5/6        1.5        1        memory
+5/7                   1        OS
+5/8                   1        os
+5/9                   2        os
+5/10                  2        os
+
+12 weeks mark
+5/11                  2        os exam(done)
+5/12       2
+5/13                  1.5      Trie
+
 
 
 </code></pre>
