--- a/html/solution/interview.html
+++ b/html/solution/interview.html
@@ -21,7 +21,9 @@ design:
 
 
 FB:
-coding: 543(ok), 42, 56, 297(ok), 88(ok), 23(ok), 1026(ok), 773(ok), 84(ok)
+coding: 543(ok), 42(ok), 56(ok), 297(ok), 88(ok), 23(ok), 1026(ok), 773(ok), 84(ok)
+109(ok)， 938(ok), 328(ok), 896(ok), 54
+
 
 design:
 auto complete/typeahead
@@ -64,8 +66,20 @@ case 3.
 二月底现场。
 
 case 4:
+蠡口 酒伞 93
 
+case 5:
 
+1. 叁儿吧 (328)
+2. 巴久柳 (896)
+** hello world **
+
+# VO
+
+1. BQ + 五司       54
+2. 要武器 药物靶    157, 158
+3. 变形(系统设计）geohashing相关
+4. 先贰拾热身 然后尔尔  test case考得很细致   20 22
 
 
 </code></pre>
