--- a/html/solution/interview.html
+++ b/html/solution/interview.html
@@ -6,6 +6,18 @@
 
 <body>
 <pre><code>
+Goal:
+Senior + compsentation
+online service team using C++
+
+Company:
+Amzn（996, use to beat offer)
+FB
+Snapchat
+
+Google(very few headcount/downlevel/Lowball/Need compete offer)
+
+
 
 Snapchat:
 Coding:
