--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -17,9 +17,14 @@ Seattle:
 
 F: E4: 160 + 100/y + 70   + 10% = 350     [61, 62] -> E4
    E5: 200  + 120/y + 100 + 15% = 450
+       205  + 150 + 100   + 15% = 480
    E6: 210  + 220   + 100 + 15* = 530
 
 G: T4: 150000 + 80  + 30 + 15%  = 290
+
+Amzn:
+    L5: 150k +      75k         = 225k
+    L6: 160 +       275k        = 435k
 
 OCI:
   IC3:  185 + 120k + 25k = 325k      [61,62] -> IC3 Senior MTS
@@ -31,6 +36,9 @@ SaleForce:
 Snap:
   L5:   210k + 300k + 50k + 15% = 580k
   L5:   210K + 300k +           = 510K
+
+ByteDance:
+  2-2   220k + 90K  + 25%       = 350k
 
 Timeline consideration:
 1. Green card: Submit 485 on 2/5. 485 + 180 = 8/5.
@@ -68,6 +76,8 @@ Coding:
 4/15 对着一亩三分地FB面经的题目刷题
 
 5/8: 只刷FB面经上的题目
+
+5/17: Done 500 mark
 
 Design:
 1. Book API design, educative design question, github Facebook design.
@@ -305,9 +315,16 @@ number   Date        rank         score    Finish time     Q1              Q2   
 12 weeks mark
 5/11                  2        os exam(done)
 5/12       2
-5/13                  1.5      Trie
+5/13                  1.5      type ahead
+5/14                  1.5      type ahead
+5/15                   1       type ahead
+5/16       0.5                 LC content
+5/17       0.5                 LC content
 
-
+11 weeks mark
+5/18                  1.5      type ahead jiuzhang
+5/19                  1.5      yelp
+5/20
 
 </code></pre>
 </body>
