--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -353,7 +353,8 @@
    <li><a href=https://leetcode.com/problems/remove-outermost-parentheses/>Remove Outermost Parentheses</a></li>
    <li><a href=https://leetcode.com/problems/minimum-add-to-make-parentheses-valid/>Minimum Add to Make Parentheses Valid</a></li>
    <li><a href=https://leetcode.com/problems/reverse-substrings-between-each-pair-of-parentheses/>Reverse Substrings Between Each Pair of Parentheses</a></li>
-   <li><a href=https://leetcode.com/problems/minimum-remove-to-make-valid-parentheses/>Minimum Remove to Make Valid Parentheses(返回String用stack记录需要去掉的位置位置)</a></li>
+   <li><a href=https://leetcode.com/problems/remove-invalid-parentheses//>Minimum Remove to Make Valid Parentheses(返回所有的可能的string, 用BFS n*2^n)</a></li>
+   <li><a href=https://leetcode.com/problems/minimum-remove-to-make-valid-parentheses/>Minimum Remove to Make Valid Parentheses(只返回一个String, 用stack记录需要去掉的string的index)</a></li>
 </ul>
 
 <div class="codingSectionName">Intervals chapter</div>
