--- a/html/solution/interview.html
+++ b/html/solution/interview.html
@@ -25,16 +25,26 @@ Coding:
 第三题一道跟Trie有关的题，找match regular expression的words，最后要用dfs，因为bfs fanout很大
 第四题是写一个iterator，很简单
 
+
 design:
 第二题design rate limiter
 
+设计系统允许用户rate歌曲，并检索top rated歌曲。读写分离设计。
+题目大概如此，给的比较模糊，所以整个过程会跟对方确认各种细节。基本思路是确认功能集，估算资源和规模，讨论high level框架，deep dive存储层，分析如何scale和容错，讨论过程中会提到一些开源系统，解释为何选用，以及一些tradeoffs。这轮是拿coderpad做的，写设计文档..
 
 
 
 
 FB:
 coding: 543(ok), 42(ok), 56(ok), 297(ok), 88(ok), 23(ok), 1026(ok), 773(ok), 84(ok)
-109(ok)， 938(ok), 328(ok), 896(ok), 54(0k), 157(ok), 158(ok), 20, 22
+109(ok)， 938(ok), 328(ok), 896(ok), 54(0k), 157(ok), 158(ok), 20(ok), 22(ok), 301(ok), 1249(ok), 472(ok), 339(ok), 973(ok), 1197(ok), 215, 785, 1249, 1428, 621
+
+
+
+G:
+
+
+
 
 
 design:
@@ -92,6 +102,44 @@ case 5:
 2. 要武器 药物靶    157, 158
 3. 变形(系统设计）geohashing相关
 4. 先贰拾热身 然后尔尔  test case考得很细致   20 22
+
+
+
+
+店面刷题网三另一，要求
+
+
+电面的时候大脑一片空白，用stack写了一通，到dry run跑例子的时候才发现bug无数，往返几次还是被面试小哥揪出bug无奈已经到时间了。后悔没有早点准备，万念俱灰。
+
+
+补充内容 (2020-5-19 23:48):
+的确是一耳丝久，还是个medium题，心绞痛
+
+
+1  第一题是散散酒
+2. 利口 久起伞
+
+
+
+
+
+
+Google interview question:
+
+
+1）优化Web服务器实现从本地文件系统提供静态内容
+
+2） 在围棋游戏中，如果你的周围全是棋子，将被捕获，如果你包围了自己，边界将扩大，写一个方法判断一个点是否会被捕获。
+
+3）生成一个井字游戏的地图，包括了全部的状态和下一步的移动。规则（按序走）：如果中间为空，则赢。如果可以，击败对手，放入一个随机的地方。
+
+4）给出了一个已知宽，高和支持的最大最小字体的屏幕，确定一个给定的字符串能显示的最大字体，单词和字符
+
+
+LC 736  too hard. lisp expression
+
+4.27 电面 巴斯斯，优化到O(1)空间复杂度
+
 
 
 </code></pre>
