--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -50,10 +50,7 @@ Timeline consideration:
 Oct 2019 - Jan 2020
 Prepare coding and design.
 
-Feb 2020
-Internal team to practice, focus on design
-2/10 Received 2 offers from internal M.S.
-
+Feb 2020 
 March 2020
 Go Through DDIA
 
@@ -110,9 +107,9 @@ number   Date        rank         score    Finish time     Q1              Q2   
 181      3/21      3834 / 6782	 	 3	     0:05:06	      0:05:06
 182      3/28      4767 / 7784	   7	     1:25:50	      0:07:00(1)	  1:10:50(2)
 186      4/25      4843 / 11684	 	 3	     0:06:25	      0:06:25
-
-
-
+193      6/13      4632 / 9991     7       0:35:24         0:02:23      x0:25:24  2 
+198      7/13      7990 / 15151    3       0:22:47        0:22:47  
+199      7/25      6737 / 14309    7       0:39:16         0:03:58      0:34:16  1 
           coding    design                                  下午
 12/4        3        2         8-11 coding,           状态很差，眼睛都睁不开了(看了design), 晚上回去睡到9点开始看API design, 9-11, 12-1睡不着 breaking bad. 2:30还是睡不着 youtube video
 12/5        2.5     1.5        10:30-11 coding ,      状态正常，2hours coding.           晚上回去8点开始看API design   8-9:30
@@ -324,7 +321,108 @@ number   Date        rank         score    Finish time     Q1              Q2   
 11 weeks mark
 5/18                  1.5      type ahead jiuzhang
 5/19                  1.5      yelp
-5/20
+5/20                  1.5      yelp            
+5/21                  1.5      yelp
+5/22        1
+5/23        4                  LC content
+5/24
+
+10week mark
+5/25
+5/26
+5/27
+5/28
+5/29
+5/30
+
+9 weeks mark
+6/1                   1       yelp
+6/2                   
+6/3 
+6/4        1                  LC
+6/5                  1.5      uber
+6/6
+6/7
+
+8 Weeks mark
+6/8                   1       Uber
+6/9                   1
+6/10
+6/11       3                  coding
+6/12       1                  codingk
+6/13
+6/14
+
+7 Weeks mark   ( On call week)
+6/15                           6-6
+6/16                           6-6
+6/17                           6-6
+6/18                           6-6
+6/19                           6-6
+6/20                           6-6
+6/21                           6-6
+
+6 Weeks mark
+6/22                           Take day off
+6/23        2                  
+6/24        2                   G
+6/25        1                   G
+6/26
+6/27      
+6/28        2                   G
+
+5 weeks mark
+6/29        1                   G
+6/30        1                   G
+7/1         1                   
+7/2                             break
+7/3                             break
+7/4                             break
+7/5                             break
+
+4 weeks mark
+
+7/6         1.5                 G
+7/7         1.5                 G
+7/8         2                   G
+7/9         1                   G
+7/10        1                   G
+7/11        1                   G
+7/12        2                   G
+
+3 Weeks mark
+7/13        1                   G(946 O(1)理解不了)
+7/14
+7/15
+7/16        1
+7/17
+7/18        2
+7/19
+
+2 Weeks mark
+7/20        1                   G
+7/21        1.5                 G
+7/22        1.5                 G
+7/23
+7/24        2
+7/25        3                   G + contest 199
+7/26
+
+
+1 week mark
+7/27        1
+7/28        3                   G + G phone interview
+7/29        2
+7/30        0 (feel burnout)
+7/31        1.5                 G
+8/1
+8/2
+
+0 week mark
+8/3         1                   G
+8/4         0                   Rej from G phone screen
+8/5         0                   Congrats, 485 reaches 180 days mark.
+8/6
 
 </code></pre>
 </body>
