--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -20,7 +20,7 @@ F: E4: 160 + 100/y + 70   + 10% = 350     [61, 62] -> E4
        205  + 150 + 100   + 15% = 480
    E6: 210  + 220   + 100 + 15* = 530
 
-G: T4: 150000 + 80  + 30 + 15%  = 290
+G: T4: 150 + 80  + 30 + 15%  = 290
 
 Amzn:
     L5: 150k +      75k         = 225k
@@ -111,6 +111,7 @@ number   Date        rank         score    Finish time     Q1              Q2   
 198      7/13      7990 / 15151    3       0:22:47        0:22:47  
 199      7/25      6737 / 14309    7       0:39:16         0:03:58      0:34:16  1 
           coding    design                                  下午
+
 12/4        3        2         8-11 coding,           状态很差，眼睛都睁不开了(看了design), 晚上回去睡到9点开始看API design, 9-11, 12-1睡不着 breaking bad. 2:30还是睡不着 youtube video
 12/5        2.5     1.5        10:30-11 coding ,      状态正常，2hours coding.           晚上回去8点开始看API design   8-9:30
 12/6        2.5      1         9-10:30  coding ,      状态正常, 1hour coding             晚上回去8点开始看API design   8:30-9:30
@@ -422,7 +423,19 @@ number   Date        rank         score    Finish time     Q1              Q2   
 8/3         1                   G
 8/4         0                   Rej from G phone screen
 8/5         0                   Congrats, 485 reaches 180 days mark.
-8/6
+8/6         
+8/7
+8/8
+8/9
+
+
+8/10                           oncall
+8/11                           oncall
+8/12       1.5        Design for FB   
+8/13       1.5              
+
+
+
 
 </code></pre>
 </body>
