--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -433,7 +433,8 @@ number   Date        rank         score    Finish time     Q1              Q2   
 8/11                           oncall
 8/12       1.5        Design for FB   
 8/13       1.5              
-
+8/14
+8/15        2                  Design news feed
 
 
 
