--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -365,7 +365,7 @@
 
 <div class="codingSectionName">System Design</div>
 <ul>
-  <li><a href="solution/Design.html">Design Question Summary </a></li>
+  <li><a href="solution/Design.html">Design</a></li>
 </ul>
 
 
